<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@id/food_name"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="16sp" />

        <TextView
            android:id="@id/food_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/image_place_holder_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4.0">

            <!--Calorias-->
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    android:id="@+id/textView"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/kcal"
                    android:textSize="16sp" />

                <TextView
                    android:id="@id/food_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_float" />

            </LinearLayout>

            <!--Carboidratos-->
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/carb"
                    android:textSize="16sp" />

                <TextView
                    android:id="@id/food_carbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_float" />

            </LinearLayout>

            <!--Proteina-->
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/protein"
                    android:textSize="16sp" />

                <TextView
                    android:id="@id/food_protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_float" />

            </LinearLayout>

            <!--Gorduras-->
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/fats"
                    android:textSize="16sp" />

                <TextView
                    android:id="@id/food_fats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_float" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>